Description
Regedit + theme "Luna" - dialog for adding information to the registry "cross" (close) active - this is incorrect.
With classic theme looks completely corrected.
VirtualBox_ReactOS3_16_08_2020_08_33_10.png
When using a different theme, the "cross" (close) looks active (this is incorrect). But it no longer works (this is correct).
The "Yes" button has an extra stroke in the form of a dotted line.
VirtualBox_ReactOS3_16_08_2020_08_35_47.png
Debug_20200816-0.4.15-dev-527-g1d1bb53.log
Attachments
Issue Links
- blocks
-
CORE-12285 Reactos Theming Issues [Themes / Theme-ing / Themeing]
-
- Untriaged
-
- is blocked by
-
CORE-19684 Installer of Ad Muncher incorrectly displays "X" close button as disabled when themed
-
- Resolved
-
-
CORE-15494 Regedit - the dialog of adding information to the registry contains an unnecessary button "Cancel"
-
- Resolved
-