[UXTHEME] Properly show disabled close button

CORE-17203